# ScanSentinel

./: .gitignore  pyproject.toml  readme.md  requirements.txt
scansentinel/: __main__.py  cli.py  hostDiscovery.py  ping.py  portscanner.py  reporter.py  scanner.py  util.py
test/: test_host.py  test_ip_utils.py  test_port_scan.py
